--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ h1 {
   color: #685454;
   text-align: center;
   font-family: "Ubuntu", sans-serif;
+  margin-bottom: 0px;
 }
 .container {
   width: 600px;
@@ -13,11 +14,12 @@ h1 {
   display: block;
   margin: 0 auto;
   border-radius: 15px;
-  padding: 10px;
+  padding: 30px;
   font-family: "Ubuntu", sans-serif;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 #cities {
-  width: 500px;
+  width: 100%;
   height: 50px;
   background-color: #f2f2f2;
   display: block;
@@ -25,9 +27,19 @@ h1 {
   padding: 0px 10px 0px 10px;
   border-radius: 15px;
   font-family: "Ubuntu", sans-serif;
+  font-size: 1em;
+  color: #685454;
+}
+.time {
+  font-size: 36px;
+  font-weight: bold;
+}
+.time small {
+  font-size: 18px;
+  vertical-align: super;
 }
 #cityOne {
-  width: 500px;
+  width: 100%;
   max-height: 150px;
   background-color: #f2f2f2;
   display: block;
@@ -42,7 +54,7 @@ h1 {
   font-family: "Ubuntu", sans-serif;
 }
 #cityTwo {
-  width: 500px;
+  width: 100%;
   max-height: 150px;
   background-color: #f2f2f2;
   display: block;
@@ -56,7 +68,7 @@ h1 {
   justify-content: space-between;
 }
 #cityThree {
-  width: 500px;
+  width: 100%;
   max-height: 150px;
   background-color: #f2f2f2;
   display: block;
