--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ h1 {
   color: #685454;
   text-align: center;
   font-family: "Ubuntu", sans-serif;
+  margin-bottom: 20px;
+}
+h2 {
   margin-bottom: 0px;
 }
 .container {
