adjusting weather details and styling

--- a/style.css
+++ b/style.css
@@ -41,6 +41,39 @@ h2 {
   font-size: 18px;
   vertical-align: middle;
 }
+.date {
+  color: grey;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-style: italic;
+  text-align: left;
+  font-size: smaller;
+  line-height: 1cm;
+}
+.city-one-weather {
+  display: flex;
+  justify-content: space-between;
+}
+.weather-icon {
+  font-size: 40px;
+}
+.weather-temperature {
+  position: relative;
+  font-weight: bolder;
+  font-size: 30px;
+}
+.weather-temperature strong {
+  vertical-align: super;
+  font-size: 15px;
+}
+.weather-description {
+  text-transform: uppercase;
+  color: grey;
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: -10px;
+}
+
 #cityOne {
   width: 100%;
   max-height: 150px;
