--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2 {
   font-family: "Ubuntu", sans-serif;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-#cities {
+#cities-select {
   width: 100%;
   height: 50px;
   background-color: #f2f2f2;
